--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "send": "node evm-to-osmosis.js",
+    "agoric": "node osmo-to-agoric.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
